# mITyFactory

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  start.bat
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yaml  iac-validate.yaml  release.yaml  spec-validation.yaml  template-smoke.yaml
.mity/: settings.json
.mity/chat/1b40ffec-3d26-4b4b-af4d-3a181f2816ab/: cost.json  runtime.json
.mity/chat/219364a9-38b0-4135-be65-58fbf1341846/: context.json  cost.json  events.jsonl  messages.jsonl  proposal.json  runtime.json
.mity/chat/94a6308e-85bf-48ed-944c-7ecf024f6341/: context.json  cost.json  events.jsonl  messages.jsonl  proposal.json  runtime.json
.mity/chat/e15c9372-db17-47a0-b15c-0bbb7e5a5a85/: context.json  cost.json  events.jsonl  messages.jsonl  proposal.json  runtime.json
.mity/chat/e82f7154-10ad-4ce6-9b4a-1abf880df661/: context.json  cost.json  events.jsonl  messages.jsonl  proposal.json  runtime.json
.specify/: GOVERNANCE.md  constitution.md  glossary.md  principles.md  roadmap.md  testing-requirements.md
.specify/features/: FEAT-CHAT-001.yaml  FEAT-CLI-001.yaml  FEAT-SPEC-KIT-001.yaml  FEAT-TEMPLATES-001.yaml  FEAT-UI-001.yaml  README.md  testing-workflow.yaml
crates/mity_agents/: Cargo.toml
crates/mity_agents/src/: a11y.rs  analyst.rs  architect.rs  designer.rs  devops.rs  error.rs  implementer.rs  lib.rs  reviewer.rs  roles.rs  security.rs  speckit.rs  tester.rs  traits.rs
crates/mity_chat/: Cargo.toml
crates/mity_chat/src/: agents.rs  autopilot.rs  cost.rs  error.rs  intake.rs  lib.rs  llm.rs  models.rs  persistence.rs  runtime.rs  session.rs  types.rs
crates/mity_cli/: Cargo.toml
crates/mity_cli/src/: main.rs
crates/mity_cli/src/commands/: add_feature.rs  create_app.rs  init.rs  mod.rs  quality_gate.rs  smoke_templates.rs  validate.rs
crates/mity_core/: Cargo.toml
crates/mity_core/src/: context.rs  engine.rs  error.rs  executor.rs  git.rs  lib.rs  registry.rs  station.rs  workflow.rs
crates/mity_core/src/stations/: create_app.rs  mod.rs
crates/mity_iac/: Cargo.toml
crates/mity_iac/src/: error.rs  lib.rs  linker.rs  provider.rs  scaffold.rs  terraform.rs  validator.rs
crates/mity_iac/tests/: iac_integration_tests.rs
crates/mity_policy/: Cargo.toml
crates/mity_policy/src/: dod.rs  engine.rs  error.rs  gate.rs  lib.rs  policy.rs  rules.rs  station.rs
crates/mity_runner/: Cargo.toml
crates/mity_runner/examples/: pytest_container.rs
crates/mity_runner/src/: cli.rs  config.rs  docker.rs  error.rs  lib.rs  mock.rs  runner.rs  stacks.rs
crates/mity_runner/tests/: container_tests.rs
crates/mity_spec/: Cargo.toml
crates/mity_spec/samples/: README.md
crates/mity_spec/samples/app/: constitution.md  glossary.md  principles.md  roadmap.md
crates/mity_spec/samples/app/features/: data-export.yaml  user-authentication.yaml
crates/mity_spec/samples/factory/: constitution.md  glossary.md  principles.md  roadmap.md
crates/mity_spec/src/: error.rs  factory.rs  kit.rs  lib.rs  models.rs  reader.rs  validator.rs  writer.rs
crates/mity_spec/tests/: spec_integration_tests.rs
crates/mity_templates/: Cargo.toml
crates/mity_templates/src/: error.rs  lib.rs  loader.rs  manifest.rs  renderer.rs  resolver.rs
crates/mity_templates/tests/: template_integration_tests.rs
crates/mity_ui/: CONTRIBUTING.md  Cargo.toml  README.md  tauri.conf.json
crates/mity_ui/.specify/: constitution.md  glossary.md  manifest.yaml  principles.md  roadmap.md
crates/mity_ui/docs/architecture/adr/: ADR-0001-mityfactory-core.md  ADR-0002-container-first.md  ADR-0003-iac-support.md
crates/mity_ui/icons/: .gitkeep
crates/mity_ui/src/: commands.rs  main.rs
docs/: git-publishing.md  quickstart.md
docs/adr/: ADR-0001-mityfactory-core.md  ADR-0002-container-first.md  ADR-0003-iac-support.md  ADR-0004-agent-chat-system.md  ADR-0005-specification-driven-development.md  ADR-0006-cost-aware-agentic-factory.md  ADR-0007-accessibility-first-design.md  README.md
docs/architecture/: reference-architecture.md  workflow-engine.md
iac/terraform/: README.md
iac/terraform/aws/: main.tf  outputs.tf  variables.tf
iac/terraform/aws/python-fastapi/: main.tf
iac/terraform/azure/: main.tf  outputs.tf  variables.tf
iac/terraform/base/: main.tf  outputs.tf  variables.tf
iac/terraform/gcp/: main.tf  outputs.tf  variables.tf
policies/: iac.yaml  python-fastapi.yaml  standard.yaml
templates/: manifest.yaml
templates/dotnet-webapi/: template.yaml
templates/dotnet-webapi/template/: .gitignore  Api.csproj  Dockerfile  Program.cs  README.md
templates/electron-app/: template.yaml
templates/frontend-angular/: template.yaml
templates/frontend-angular/template/: .gitignore  Dockerfile  README.md  angular.json  package.json
templates/frontend-react/: template.yaml
templates/frontend-vue/: template.yaml
templates/frontend-vue/template/: .gitignore  Dockerfile  README.md  package.json
templates/fullstack-dotnet-blazor/: template.yaml
templates/fullstack-dotnet-blazor/template/: .editorconfig  .gitignore  Directory.Build.props  Directory.Packages.props  README.md  docker-compose.yml  {{project_name}}.sln
templates/fullstack-quarkus-react/: template.yaml
templates/fullstack-quarkus-react/template/: README.md
templates/fullstack-quarkus-vue/: template.yaml
templates/fullstack-quarkus-vue/template/: README.md
templates/fullstack-springboot-react/: template.yaml
templates/fullstack-springboot-react/template/: README.md
templates/fullstack-springboot-vue/: template.yaml
templates/fullstack-springboot-vue/template/: .gitignore  README.md  docker-compose.yml
templates/java-quarkus/: template.yaml
templates/java-quarkus/template/: .gitignore  README.md  mvnw  pom.xml
templates/java-springboot/: template.yaml
templates/java-springboot/template/: .gitignore  Dockerfile  README.md  mvnw  pom.xml
templates/python-fastapi/: template.yaml
templates/python-fastapi/template/: Dockerfile  README.md  pyproject.toml
templates/rust-api/: template.yaml
(+162 files in other folders)
