[workspace]
resolver = "2"
members = [
    "crates/mity_cli",
    "crates/mity_core",
    "crates/mity_runner",
    "crates/mity_spec",
    "crates/mity_templates",
    "crates/mity_policy",
    "crates/mity_iac",
    "crates/mity_agents",
    "crates/mity_chat",
    # Desktop UI (requires Tauri CLI: cargo install tauri-cli)
    "crates/mity_ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["mITyFactory Contributors"]
repository = "https://github.com/mityfactory/mityfactory"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File system
walkdir = "2.4"
tempfile = "3.9"
fs_extra = "1.3"
glob = "0.3"

# Docker/Container interaction
bollard = "0.16"

# Validation
jsonschema = "0.18"
regex = "1.10"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Testing
mockall = "0.12"

# Internal crates
mity_core = { path = "crates/mity_core" }
mity_runner = { path = "crates/mity_runner" }
mity_spec = { path = "crates/mity_spec" }
mity_templates = { path = "crates/mity_templates" }
mity_policy = { path = "crates/mity_policy" }
mity_iac = { path = "crates/mity_iac" }
mity_agents = { path = "crates/mity_agents" }
mity_chat = { path = "crates/mity_chat" }

[profile.release]
lto = true
codegen-units = 1
strip = true
