[package]
name = "mity_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI interface for mITyFactory"

[[bin]]
name = "mity"
path = "src/main.rs"

[dependencies]
mity_core.workspace = true
mity_spec.workspace = true
mity_runner.workspace = true
mity_templates.workspace = true
mity_policy.workspace = true
mity_iac.workspace = true
mity_agents.workspace = true

clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
