[package]
name = "mity_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core workflow engine for mITyFactory"

[dependencies]
mity_spec.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
mockall.workspace = true
