[package]
name = "mity_iac"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Infrastructure as Code scaffolding and validation for mITyFactory"

[dependencies]
mity_runner.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
walkdir.workspace = true
fs_extra.workspace = true

[dev-dependencies]
tempfile.workspace = true
