[package]
name = "mity_policy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Quality gates and policy enforcement for mITyFactory"

[dependencies]
mity_spec.workspace = true
mity_core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
regex.workspace = true
glob.workspace = true
walkdir.workspace = true
chrono.workspace = true
async-trait.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
