[package]
name = "mity_runner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Container execution wrapper for mITyFactory"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
bollard.workspace = true
uuid.workspace = true
chrono.workspace = true
futures-util = "0.3"
parking_lot = "0.12"

[dev-dependencies]
tempfile.workspace = true
mockall.workspace = true
