[package]
name = "mity_spec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Spec Kit management for mITyFactory"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
walkdir.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
mockall.workspace = true
