[package]
name = "mity_templates"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Template and manifest parsing for mITyFactory"

[dependencies]
mity_spec.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
walkdir.workspace = true
fs_extra.workspace = true
glob.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
